[gd_scene load_steps=9 format=3 uid="uid://d3fimv4fp01uq"]

[ext_resource type="ButtonGroup" uid="uid://c3you4cxxbmeu" path="res://user_interface/layers_menu/layer_button_group.tres" id="1_82fnv"]
[ext_resource type="Script" uid="uid://dy5wj6tqmqp8d" path="res://user_interface/layer_button/layer_button.gd" id="2_fc6ya"]
[ext_resource type="Texture2D" uid="uid://bg3vbvo600vk1" path="res://user_interface/layer_button/eye-svgrepo-com.svg" id="2_qnf8a"]
[ext_resource type="Texture2D" uid="uid://jmmr1xap6tda" path="res://user_interface/layer_button/lock-open-svgrepo-com.svg" id="3_buf6k"]
[ext_resource type="Script" uid="uid://cobqbkyaa2hiw" path="res://user_interface/context_menu/context_menu_button.gd" id="4_c8u5a"]
[ext_resource type="Texture2D" uid="uid://bw6lfxepwp3ae" path="res://user_interface/layer_button/eye-closed-svgrepo-com.svg" id="4_k5gk4"]
[ext_resource type="Texture2D" uid="uid://cuqnxe622evau" path="res://user_interface/layer_button/lock-svgrepo-com.svg" id="5_gn5y1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ac6l"]
bg_color = Color(0.28485, 0.28485, 0.28485, 1)

[node name="LayerButton" type="Button"]
custom_minimum_size = Vector2(0, 40)
theme_override_styles/normal = SubResource("StyleBoxFlat_6ac6l")
toggle_mode = true
button_group = ExtResource("1_82fnv")
text = "Layer 1"
alignment = 0
script = ExtResource("2_fc6ya")
show_icon = ExtResource("2_qnf8a")
hide_icon = ExtResource("4_k5gk4")
locked_icon = ExtResource("5_gn5y1")
unlocked_icon = ExtResource("3_buf6k")

[node name="RMB" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
button_mask = 2
flat = true
script = ExtResource("4_c8u5a")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 2

[node name="NameField" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Layer 1"

[node name="VisibilityButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = ExtResource("2_qnf8a")
flat = true
expand_icon = true

[node name="LockButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = ExtResource("3_buf6k")
flat = true
expand_icon = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="RMB" to="RMB" method="_on_pressed"]
[connection signal="focus_exited" from="HBoxContainer/NameField" to="." method="_on_name_field_focus_exited"]
[connection signal="text_submitted" from="HBoxContainer/NameField" to="." method="_on_name_field_text_submitted"]
[connection signal="pressed" from="HBoxContainer/VisibilityButton" to="." method="_on_visibility_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LockButton" to="." method="_on_lock_button_pressed"]
